--- a/index.html
+++ b/index.html
@@ -1,35 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Collective</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm bg-body-tertiary">
+        <div id="nav" class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <div id="logo">
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">rising</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">sc+</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                   <button class="btn btn-outline-success" type="submit">Searchh</button>
+                </form>
+            </div>
+        </div>
+    </nav>
     <section class="background-image">
         <nav>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">home</a></li>
-                    <li><a href="">about</a></li>
-                    <li><a href="">explore</a></li>
-                    <li><a href="">rising</a></li>
-                    <li><a href="">sc+</a></li>
-                </ul>
-            </div>
         </nav>
-<div class="text-box">
-    <h1>Sound Society</h1>
-    <p>World's #1 Studio Community</p>
-</div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 
     </section>
+    <div class="text-box">
+        <h1>Sound Collective</h1>
+        <p>World's #1 Immersive Studio Community</p>
+        <a href="" class="hero-btn">Visit Us To Know More</a>
+    </div>
+
+
+    <footer class="container-fluid">
+        <div class="row jusitfy-content-center text-center align-items-center">
+            <div id="copyright" class="col-md-4">&copy; sound collective</div>
+            <div class="col-md-4">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">rising</a></li>
+                    <li><a href="#">sc+</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <a href="#">Follow Us</a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
