commit each change

--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link" href="/index.html">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">about</a>
+                        <a class="nav-link" href="#">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/rising.html">rising</a>
@@ -44,7 +44,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                   <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <button class="btn btn-outline-success" type="submit">Searchh</button>
                 </form>
             </div>
         </div>
@@ -59,10 +59,17 @@
 
     </section>
     <div class="text-box">
-        <h1>Sound Collective</h1>
-        <p>World's #1 Immersive Studio Community</p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
+        <h1>who are we?</h1>
+        <br>our ultimate goal is to bring music lovers together in one safe place.<br>
+        record &amp; post tracks in minutes. the collective will comment &amp; share the art.<br>
+        post your favorite tracks to your profile and share your fav sounds with the collective.<br>
+        discover your new favorite artists &amp; tracks you'll want to play on repeat. (it's okay, we won't tell anyone)<br>
+        with sc+, aspiring artists can record, mix, and share - to star amongst the rising artists page.<br>
+        this means your art is top priority, it's front and center for the collective on their discover page.<br>
+        with Sound Collective, it's your world, and we're living in it.
     </div>
+
+
 
 
     <footer class="container-fluid">
@@ -70,8 +77,8 @@
             <div id="copyright" class="col-md-4">&copy; sound collective</div>
             <div class="col-md-4">
                 <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="/about.html">about</a></li>
+                    <li><a href="/index.html">home</a></li>
+                    <li><a href="#">about</a></li>
                     <li><a href="/rising.html">rising</a></li>
                     <li><a href="/sc.html">sc+</a></li>
                 </ul>
