--- a/rising.html
+++ b/rising.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link" href="/index.html">home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/rising.html">rising</a>
+                        <a class="nav-link" href="#">rising</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sc.html">sc+</a>
@@ -44,7 +44,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                   <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <button class="btn btn-outline-success" type="submit">Searchh</button>
                 </form>
             </div>
         </div>
@@ -59,10 +59,17 @@
 
     </section>
     <div class="text-box">
-        <h1>Sound Collective</h1>
-        <p>World's #1 Immersive Studio Community</p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
+        <h1>Aim for the stars...</h1>
+        <p>with Rising, you can listen to them too.<br>
+        </p>you'll have thousands of up and coming artists at your fingertips.<br>
+        there's a genre for every mood. feeling like hip hop? pop? electronic? country? it's all here.<br>
+        connect with your favorite stars. see what they're up to.  listen to what sounds they're working on.<br>
+        view live performances straight from the stars. ask questions during live q &amp; a's.<br>
+        be in the front row, never settle for anything less with Sound Collective.<br>
+        you're not a 'fan' here, you're part of the collective.
     </div>
+
+
 
 
     <footer class="container-fluid">
@@ -70,9 +77,9 @@
             <div id="copyright" class="col-md-4">&copy; sound collective</div>
             <div class="col-md-4">
                 <ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="/index.html">home</a></li>
                     <li><a href="/about.html">about</a></li>
-                    <li><a href="/rising.html">rising</a></li>
+                    <li><a href="#">rising</a></li>
                     <li><a href="/sc.html">sc+</a></li>
                 </ul>
             </div>
