--- a/sc.html
+++ b/sc.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link" href="/index.html">home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">about</a>
@@ -39,12 +39,12 @@
                         <a class="nav-link" href="/rising.html">rising</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sc.html">sc+</a>
+                        <a class="nav-link" href="#">sc+</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                   <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <button class="btn btn-outline-success" type="submit">Searchh</button>
                 </form>
             </div>
         </div>
@@ -59,10 +59,17 @@
 
     </section>
     <div class="text-box">
-        <h1>Sound Collective</h1>
-        <p>World's #1 Immersive Studio Community</p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
+        <h1>be your own creative director</h1>
+        <p>be who you want to be.</p><br>
+        with Sound Collective +, you can record, mix, and create the sound we deserve to hear.<br>
+        share your work ith the collective, we'll make sure it's at the top of the Rising page.<br>
+        music lovers will have the opportunity to hear your creations, follow you, and interact with you.<br>
+        your profile will have a + indiciating a creator profile.<br>
+        keep your audience engaged with live performances, q&amp; a sessions, whatever you want. Build your own Collective.<br>
+        the stage is yours.
     </div>
+
+
 
 
     <footer class="container-fluid">
@@ -70,10 +77,10 @@
             <div id="copyright" class="col-md-4">&copy; sound collective</div>
             <div class="col-md-4">
                 <ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="/index.html">home</a></li>
                     <li><a href="/about.html">about</a></li>
                     <li><a href="/rising.html">rising</a></li>
-                    <li><a href="/sc.html">sc+</a></li>
+                    <li><a href="#">sc+</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
