commit each change

--- a/rising.html
+++ b/rising.html
@@ -7,7 +7,8 @@
     <title>Sound Collective</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 </head>
 
-<body>
+<body class="class-for-index">
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div id="nav" class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -59,12 +60,12 @@
 
     </section>
     <div class="text-box">
-        <h1>Aim for the stars...</h1>
+        <h1 class="animate__animated animate__shakeX">aim for the stars</h1>
         <p>with Rising, you can listen to them too.<br>
         </p>you'll have thousands of up and coming artists at your fingertips.<br>
         there's a genre for every mood. feeling like hip hop? pop? electronic? country? it's all here.<br>
-        connect with your favorite stars. see what they're up to.  listen to what sounds they're working on.<br>
-        view live performances straight from the stars. ask questions during live q &amp; a's.<br>
+        connect with your favorite Stars. see what they're up to.  listen to what sounds they're working on.<br>
+        view live performances straight from their profile. ask questions during live q &amp; a's, or just chill and vibe.<br>
         be in the front row, never settle for anything less with Sound Collective.<br>
         you're not a 'fan' here, you're part of the collective.
     </div>
