--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Sound Collective</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
@@ -59,7 +60,7 @@
 
     </section>
     <div class="text-box">
-        <h1>who are we?</h1>
+        <h1 class="animate__animated animate__pulse">who are we?</h1>
         <br>our ultimate goal is to bring music lovers together in one safe place.<br>
         record &amp; post tracks in minutes. the collective will comment &amp; share the art.<br>
         post your favorite tracks to your profile and share your fav sounds with the collective.<br>
