--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Sound Collective</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -59,9 +64,9 @@
 
     </section>
     <div class="text-box">
-        <h1>Sound Collective</h1>
+        <h1 class="animate__animated animate__zoomIn">Sound Collective</h1>
         <p>World's #1 Immersive Studio Community</p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
+        <a href="sc.html" class="hero-btn">Visit Us To Know More</a>
     </div>
 
 
