--- a/sc.html
+++ b/sc.html
@@ -4,10 +4,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Collective</title>
+    <title>Sound Collective</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
@@ -59,14 +60,14 @@
 
     </section>
     <div class="text-box">
-        <h1>be your own creative director</h1>
+        <h1 class="animate__animated animate__flash">be your own creative director</h1>
         <p>be who you want to be.</p><br>
         with Sound Collective +, you can record, mix, and create the sound we deserve to hear.<br>
-        share your work ith the collective, we'll make sure it's at the top of the Rising page.<br>
+        share your work with the collective, we'll make sure it's at the top of the Rising page.<br>
         music lovers will have the opportunity to hear your creations, follow you, and interact with you.<br>
         your profile will have a + indiciating a creator profile.<br>
         keep your audience engaged with live performances, q&amp; a sessions, whatever you want. Build your own Collective.<br>
-        the stage is yours.
+        the stage is all yours.
     </div>
 
 
