--- a/about.html
+++ b/about.html
@@ -4,71 +4,73 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Sound Collective</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
-</head>
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-body-tertiary">
-        <div id="nav" class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <div id="logo">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
+        </head>
+
+        <body>
+            <nav class="navbar navbar-expand-sm bg-body-tertiary">
+                <div id="nav" class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <div id="logo">
+                        </div>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/index.html">home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/about.html">about</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/rising.html">rising</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/sc.html">sc+</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn" type="submit"></button>
+                            <button id="btn2" class="btn2" type="submit"></button>
+                        </form>
+                    </div>
                 </div>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/index.html">home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">about</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/rising.html">rising</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/sc.html">sc+</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Searchh</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <section class="background-image">
-        <nav>
-        </nav>
+            </nav>
+            <section class="background-image">
+                <nav>
+                </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-
-    </section>
     <div class="text-box">
         <h1 class="animate__animated animate__pulse">who are we?</h1>
-        <br>our ultimate goal is to bring music lovers together in one safe place.<br>
+       <p>the world's first music studio in your pocket.</p>
+        our ultimate goal is to bring music lovers together in one safe place.<br>
         record &amp; post tracks in minutes. the collective will comment &amp; share the art.<br>
         post your favorite tracks to your profile and share your fav sounds with the collective.<br>
         discover your new favorite artists &amp; tracks you'll want to play on repeat. (it's okay, we won't tell anyone)<br>
         with sc+, aspiring artists can record, mix, and share - to star amongst the rising artists page.<br>
         this means your art is top priority, it's front and center for the collective on their discover page.<br>
-        with Sound Collective, it's your world, and we're living in it.
+        with Sound Collective, it's your world, and we're living in it.</br>
     </div>
+</section>
 
 
 
@@ -89,7 +91,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
