--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link" href="/index.html">home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">about</a>
@@ -49,7 +49,8 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                   <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <button id="btn" class="btn" type="submit"></button>
+                    <button id="btn2" class="btn2" type="submit"></button>
                 </form>
             </div>
         </div>
@@ -58,20 +59,16 @@
         <nav>
         </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-
-    </section>
     <div class="text-box">
         <h1 class="animate__animated animate__zoomIn">Sound Collective</h1>
         <p>World's #1 Immersive Studio Community</p>
         <a href="sc.html" class="hero-btn">Visit Us To Know More</a>
     </div>
+</section>
 
 
     <footer class="container-fluid">
-        <div class="row jusitfy-content-center text-center align-items-center">
+        <div class="row jusitfy-content-center me-auto ms-auto text-center align-items-center">
             <div id="copyright" class="col-md-4">&copy; sound collective</div>
             <div class="col-md-4">
                 <ul>
@@ -86,7 +83,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
