--- a/rising.html
+++ b/rising.html
@@ -8,15 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
-<body class="class-for-index">
+<body>
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div id="nav" class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -37,7 +41,7 @@
                         <a class="nav-link" href="/about.html">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">rising</a>
+                        <a class="nav-link" href="/rising.html">rising</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sc.html">sc+</a>
@@ -45,7 +49,8 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <button class="btn" type="submit"></button>
+                    <button id="btn2" class="btn2" type="submit"></button>
                 </form>
             </div>
         </div>
@@ -53,12 +58,7 @@
     <section class="background-image">
         <nav>
         </nav>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-
-    </section>
+    
     <div class="text-box">
         <h1 class="animate__animated animate__shakeX">aim for the stars</h1>
         <p>with Rising, you can listen to them too.<br>
@@ -69,8 +69,7 @@
         be in the front row, never settle for anything less with Sound Collective.<br>
         you're not a 'fan' here, you're part of the collective.
     </div>
-
-
+    </section>
 
 
     <footer class="container-fluid">
@@ -89,7 +88,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
