--- a/sc.html
+++ b/sc.html
@@ -4,16 +4,20 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Collective</title> 
+    <title>Sound Collective</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kdam+Thmor+Pro&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -40,12 +44,13 @@
                         <a class="nav-link" href="/rising.html">rising</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">sc+</a>
+                        <a class="nav-link" href="/sc.html">sc+</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Searchh</button>
+                    <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                    <button class="btn" type="submit"></button>
+                    <button id="btn2" class="btn2" type="submit"></button>
                 </form>
             </div>
         </div>
@@ -54,21 +59,18 @@
         <nav>
         </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
 
+            <div class="text-box">
+                <h1 class="animate__animated animate__flash">be your own creative director</h1>
+                <p>be who you want to be.</p><br>
+                with Sound Collective +, you can record, mix, and create the sound we deserve to hear.<br>
+                share your work with the collective, we'll make sure it's at the top of the Rising page.<br>
+                music lovers will have the opportunity to hear your creations, follow you, and interact with you.<br>
+                your profile will have a + indiciating a creator profile.<br>
+                keep your audience engaged with live performances, q&amp; a sessions, whatever you want. Build your own Collective.<br>
+                the stage is all yours.
+            </div>
     </section>
-    <div class="text-box">
-        <h1 class="animate__animated animate__flash">be your own creative director</h1>
-        <p>be who you want to be.</p><br>
-        with Sound Collective +, you can record, mix, and create the sound we deserve to hear.<br>
-        share your work with the collective, we'll make sure it's at the top of the Rising page.<br>
-        music lovers will have the opportunity to hear your creations, follow you, and interact with you.<br>
-        your profile will have a + indiciating a creator profile.<br>
-        keep your audience engaged with live performances, q&amp; a sessions, whatever you want. Build your own Collective.<br>
-        the stage is all yours.
-    </div>
 
 
 
@@ -89,7 +91,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
